manifest/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sam-blackberry
spec:
  rules:
  - host: blackberry.192.168.64.16.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: sam-blackberry-api
          servicePort: nodejs
